faq, cars, tutors updated

--- a/src/components/Prices.scss
+++ b/src/components/Prices.scss
@@ -44,6 +44,11 @@
     @media screen and (min-width: 992px) {
       grid-column-end: 4;
     }
+
+    .card__list {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 
   &__title {
