--- a/src/components/Exam.scss
+++ b/src/components/Exam.scss
@@ -1,20 +1,14 @@
 .exam {
-  background: url('../images/wallpaper-2.webp') center center no-repeat;
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   padding: 80px 0;
 
   &__description {
     margin: 50px 0 80px;
     padding: 0 110px;
-
-    p {
-      color: var(--color-white);
-      text-align: center;
-
-      &:not(:last-child) {
-        margin-bottom: 16px;
-      }
-    }
+    color: var(--color-white);
+    text-align: center;
   }
 
   .wrapper {
