--- a/src/components/Tutors/Tutors.scss
+++ b/src/components/Tutors/Tutors.scss
@@ -1,7 +1,8 @@
 .tutors {
   padding: 20px 0 40px;
   border-bottom: 1px solid var(--color-separator);
-  background: url('../../images/background/tutors.svg') right center no-repeat;
+  background-position: right center;
+  background-repeat: no-repeat;
 
   @media screen and (min-width: 992px) {
     padding: 40px 0 80px;
