--- a/src/components/Footer/PreFooter.scss
+++ b/src/components/Footer/PreFooter.scss
@@ -2,7 +2,8 @@
   &__logo {
     height: 67px;
     width: 190px;
-    background: url('../../images/logo.svg') 0 0 no-repeat;
+    background-position: 0;
+    background-repeat: no-repeat;
     background-size: cover;
 
     @media screen and (max-width: 991px) {
