--- a/src/components/Exam.scss
+++ b/src/components/Exam.scss
@@ -2,13 +2,26 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 80px 0;
+  padding: 40px 0;
+
+  @media screen and (min-width: 992px) {
+    padding: 80px 0;
+  }
 
   &__description {
-    margin: 50px 0 80px;
-    padding: 0 110px;
     color: var(--color-white);
+    margin: 40px 0;
+    padding: 0 20px;
     text-align: center;
+
+    @media screen and (min-width: 768px) {
+      padding: 0 60px;
+    }
+
+    @media screen and (min-width: 992px) {
+      padding: 0 110px;
+      margin: 50px 0 80px;
+    }
   }
 
   .wrapper {
