--- a/src/components/Feedbacks.scss
+++ b/src/components/Feedbacks.scss
@@ -1,4 +1,8 @@
 .feedbacks {
   background: url('../images/background/feedbacks.svg') 0 center no-repeat;
-  padding: 80px 0;
+  padding: 40px 0;
+
+  @media screen and (min-width: 992px) {
+    padding: 80px 0;
+  }
 }
