--- a/src/components/Info/Info.scss
+++ b/src/components/Info/Info.scss
@@ -5,4 +5,10 @@
     padding-bottom: 50px;
     padding-top: 60px;
   }
+
+  .grid {
+    @media screen and (max-width: 991px) {
+      grid-template-columns: 1fr;
+    }
+  }
 }
