--- a/src/components/Info/InfoItem.scss
+++ b/src/components/Info/InfoItem.scss
@@ -2,7 +2,11 @@
   &__title {
     font-size: 24px;
     font-weight: 600;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
+
+    @media screen and (min-width: 992px) {
+      margin-bottom: 20px;
+    }
 
     &--warning {
       color: var(--color-primary);
