--- a/src/components/Promo/Benefit.scss
+++ b/src/components/Promo/Benefit.scss
@@ -4,7 +4,11 @@
   flex-direction: column;
 
   &__image {
-    margin-bottom: 30px;
+    margin-bottom: 16px;
+
+    @media screen and (min-width: 992px) {
+      margin-bottom: 30px;
+    }
   }
 
   &__title {
