--- a/src/components/ContactForm.scss
+++ b/src/components/ContactForm.scss
@@ -1,33 +1,51 @@
-.map {
-  height: 620px;
-  background: gray;
+.contact-form {
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  @media screen and (min-width: 768px) {
+    height: 620px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 
   .wrapper {
     height: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
   }
 }
 
 .form {
-  width: 629px;
-  border-radius: 10px;
   background: var(--color-white);
+  border-radius: 10px;
   box-shadow: 0 4px 4px var(--color-shadow);
+  max-width: 629px;
   padding: 30px 30px;
+  position: relative;
+  width: 100%;
+  z-index: 1;
 
   &__title {
-    font-size: 48px;
+    font-size: 24px;
     font-weight: 600;
     margin-bottom: 30px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 48px;
+    }
   }
 
   &__content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 20px 20px;
     margin-bottom: 20px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 48px;
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   input,
@@ -47,9 +65,12 @@
 
   textarea {
     resize: none;
-    grid-column-start: 1;
-    grid-column-end: 3;
     font-family: inherit;
     height: 150px;
+
+    @media screen and (min-width: 768px) {
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
   }
 }
