--- a/src/components/Prices.scss
+++ b/src/components/Prices.scss
@@ -11,7 +11,7 @@
     margin-top: 60px;
   }
 
-  .grid--3 {
+  .grid__columns--3 {
     grid-template-columns: 1fr;
 
     @media screen and (min-width: 768px) {
