--- a/src/components/Article.scss
+++ b/src/components/Article.scss
@@ -1,76 +1,40 @@
-.contact-form {
-  padding-top: 20px;
-  padding-bottom: 20px;
+.article {
+  padding: 256px 0 60px;
 
-  @media screen and (min-width: 768px) {
-    height: 620px;
-    padding-top: 0;
-    padding-bottom: 0;
+  * {
+    color: var(--color-secondary-text);
   }
 
-  .wrapper {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  h1 {
+    margin: 40px 0;
   }
-}
 
-.form {
-  background: var(--color-white);
-  border-radius: 10px;
-  box-shadow: 0 4px 4px var(--color-shadow);
-  max-width: 629px;
-  padding: 30px 30px;
-  position: relative;
-  width: 100%;
-  z-index: 1;
+  h2 {
+    margin: 30px 0;
+  }
 
-  &__title {
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 30px;
+  h3, h4, h5, h5 {
+    margin: 20px 0;
+  }
 
-    @media screen and (min-width: 768px) {
-      font-size: 48px;
+  a {
+    color: var(--color-primary);
+
+    &:hover{
+      text-decoration: underline;
     }
   }
 
-  &__content {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 20px 20px;
-    margin-bottom: 20px;
-
-    @media screen and (min-width: 768px) {
-      font-size: 48px;
-      grid-template-columns: repeat(2, 1fr);
-    }
+  p {
+    margin: 10px 0;
   }
 
-  input,
-  textarea {
-    background: var(--color-background);
-    border: none;
-    border-radius: 8px;
-    outline: none;
-    padding: 20px;
-    font-family: inherit;
-    font-size: 16px;
-  }
+  ul {
+    margin: 20px 0;
 
-  input {
-    height: 50px;
-  }
-
-  textarea {
-    resize: none;
-    font-family: inherit;
-    height: 150px;
-
-    @media screen and (min-width: 768px) {
-      grid-column-start: 1;
-      grid-column-end: 3;
+    li {
+      list-style-type: disc;
+      list-style-position: inside;
     }
   }
 }
