--- a/src/components/Footer/PostFooter.scss
+++ b/src/components/Footer/PostFooter.scss
@@ -6,6 +6,14 @@
       order: 1;
       margin-top: 20px;
     }
+
+    a {
+      color: var(--color-primary);
+
+      &:hover{
+        text-decoration: underline;
+      }
+    }
   }
 
   .wrapper {
