--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,11 +15,41 @@
     width: 190px;
     height: 67px;
     background: url("../../images/logo-white.svg") 0 0 no-repeat;
+
+    @media screen and (max-width: 991px) {
+      display: none;
+    }
   }
 
   &--dark {
     .header__logo {
       background: url("../../images/logo.svg") 0 0 no-repeat;
+
+      @media screen and (max-width: 991px) {
+        display: block;
+      }
+    }
+  }
+
+  &__menu-button {
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: auto;
+    position: relative;
+    z-index: 1;
+    background: none;
+    border: none;
+
+    @media screen and (min-width: 992px) {
+      display: none;
+    }
+
+    .line {
+      transition: all .4s ease;
     }
   }
 }
@@ -27,13 +57,45 @@
 .nav {
   margin: 14px auto 0;
 
+  @media screen and (max-width: 991px) {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    margin: 0;
+    padding: 102px 0 0;
+    background: rgba(0, 0, 0, .85);
+  }
+
   &__item {
     color: var(--color-white);
     font-weight: 600;
     font-size: 15px;
 
+    @media screen and (max-width: 991px) {
+      display: block;
+      padding: 20px 20px 20px 30px;
+    }
+
     &:not(:last-child) {
-      margin-right: 70px;
+      @media screen and (max-width: 991px) {
+        border-bottom: 1px solid var(--color-scorpion);
+      }
+
+      @media screen and (min-width: 992px) {
+        margin-right: 30px;
+      }
+
+      @media screen and (min-width: 1200px) {
+        margin-right: 70px;
+      }
+    }
+  }
+
+  &--active {
+    @media screen and (max-width: 991px) {
+      display: block;
     }
   }
 }
