--- a/src/components/Promo/Promo.scss
+++ b/src/components/Promo/Promo.scss
@@ -6,7 +6,7 @@
   position: relative;
 
   @media screen and (min-width: 768px) {
-    padding: 230px 0 50px;
+    padding-bottom: 50px;
   }
 
   @media screen and (min-width: 992px) {
