--- a/src/components/Footer/PreFooter.scss
+++ b/src/components/Footer/PreFooter.scss
@@ -87,6 +87,10 @@
     @media screen and (min-width: 992px) {
       font-size: 24px;
     }
+
+    & ~ .pre-footer__title {
+      margin-top: 20px;
+    }
   }
 
   .wrapper {
