--- a/src/components/Header/HeaderLanguage.scss
+++ b/src/components/Header/HeaderLanguage.scss
@@ -39,4 +39,10 @@
       background-image: url('../../images/icons/flag-russia.svg');
     }
   }
+
+  &__abbr {
+    color: var(--color-white);
+    text-transform: uppercase;
+    font-weight: 700;
+  }
 }
