--- a/src/components/Footer/PostFooter.scss
+++ b/src/components/Footer/PostFooter.scss
@@ -37,6 +37,10 @@
   display: flex;
 
   &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     &:not(:first-child) {
       margin-left: 30px;
     }
@@ -47,6 +51,7 @@
       height: 30px;
       opacity: .85;
       transition: opacity .4s ease;
+      margin-bottom: 8px;
 
       &:hover {
         opacity: 1;
@@ -70,5 +75,10 @@
         background: url('../../images/icons/whatsapp.svg') 0 0 no-repeat;
       }
     }
+  }
+
+  &__subtitle {
+    font-size: 10px;
+    color: var(--color-primary);
   }
 }
