--- a/src/components/ContactForm.scss
+++ b/src/components/ContactForm.scss
@@ -1,21 +1,3 @@
-.contact-form {
-  padding-top: 20px;
-  padding-bottom: 20px;
-
-  @media screen and (min-width: 768px) {
-    height: 620px;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-
-  .wrapper {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
 .form {
   background: var(--color-white);
   border-radius: 10px;
@@ -54,23 +36,76 @@
     border: none;
     border-radius: 8px;
     outline: none;
-    padding: 20px;
     font-family: inherit;
     font-size: 16px;
   }
 
   input {
     height: 50px;
+    padding: 0 20px;
   }
 
   textarea {
     resize: none;
     font-family: inherit;
     height: 150px;
+    padding: 20px;
 
     @media screen and (min-width: 768px) {
       grid-column-start: 1;
       grid-column-end: 3;
     }
+  }
+
+  div:nth-child(3) {
+    display: flex;
+    justify-content: center;
+
+    div {
+      display: flex;
+      align-items: center;
+    }
+
+    a {
+      background: url(../images/icons/reload.svg) 0 0 no-repeat;
+      background-size: cover;
+      font-size: 0;
+      color: transparent;
+      width: 20px;
+      height: 20px;
+      display: block;
+      opacity: .75;
+      transition: opacity .4s ease;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+
+.contact-form {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .wrapper {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__capcha-input {
+    width: 250px;
+    margin: 20px auto;
+    text-align: center;
   }
 }
