--- a/src/components/ContactForm.scss
+++ b/src/components/ContactForm.scss
@@ -31,7 +31,8 @@
   }
 
   input,
-  textarea {
+  textarea,
+  select {
     background: var(--color-background);
     border: none;
     border-radius: 8px;
@@ -40,9 +41,21 @@
     font-size: 16px;
   }
 
-  input {
+  input,
+  select {
     height: 50px;
     padding: 0 20px;
+  }
+
+  select {
+    @media screen and (min-width: 768px) {
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
+  }
+
+  select option {
+    background: #fff;
   }
 
   textarea {
